# poetry-repo-package-bug

consumerpackage/: Dockerfile  pyproject.toml
packagea/: README.md  pyproject.toml
packageb/: pyproject.toml
