[tool.poetry]
name = "consumerpackage"
version = "0.1.0"
description = ""
authors = ["André Roggeri Campos <a.roggeri.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
packagea = { git = "https://github.com/andreroggeri/poetry-repo-package-bug.git", rev = "packagea-0.1.0", subdirectory = "packagea" }
packageb = { git = "https://github.com/andreroggeri/poetry-repo-package-bug.git", rev = "packageb-0.1.0", subdirectory = "packageb" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
